# stacie

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
docs/data/: README.md  plan.py
docs/data/lammps_lj3d/: README.md  job.sh  plan.py  runlammps.py
docs/data/openmm_salt/: README.md  job.sh  plan.py
docs/source/: conf.py
docs/source/development/: setup.md
docs/source/properties/: error_estimates.md
docs/source/theory/: notation.md  overview.md  statistics.md
src/stacie/: utils.py
tools/: ptens.py
