[build-system]
requires = ["setuptools>=65.0", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stacie"
authors = [
    { name = "Gözdenur Toraman", email = "gozdenur.toraman@ugent.be" },
    { name = "Toon Verstraelen", email = "toon.verstraelen@ugent.be" },
]
description = "STable AutoCorrelation Integral Estimator (STACIE)"
readme = "README.md"
license = { text = "LGPL-3.0-or-later OR CC-BY-SA-4.0 (for documentation)" }
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    # Ensure changes to these dependencies are reflected in .github/requirements-old.txt
    "attrs>=23.1.0",
    "matplotlib>=3.9.0",
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "typing-extensions>=4.8.0; python_version < '3.11'",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "furo",
    "intersphinx-registry",
    "jupyter",
    "jupyter-cache",
    "jupytext",
    "mdtraj",
    "myst-nb",
    "myst-parser",
    "nglview",
    "numpydoc",
    "openmm>=8.0",
    "packaging",
    "pandas",
    "setuptools_scm",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
    "sphinx-codeautolink",
    "sphinx-copybutton",
    "sphinx-tippy",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-svg2pdfconverter",
    "stepup>=4.0.0rc7; python_version>='3.11'",
    "stepup-reprep>=4.0.0rc3; python_version>='3.11'",
]
tests = [
    "pytest",
    "pytest-regtest",
    "pytest-xdist",
    "numdifftools",
]
dev = ["pre-commit"]

[project.urls]
Documentation = "https://molmod.github.io/stacie/"
Issues = "https://github.com/molmod/stacie/issues/"
Source = "https://github.com/molmod/stacie/"

[tool.pytest.ini_options]
addopts = "-n auto --dist worksteal -W error"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "A", "B", "BLE", "C4", "E", "EXE", "F", "I", "ICN", "ISC", "N", "NPY", "PERF", "PIE",
    "PL", "PT", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TRY", "UP", "W"
]
ignore = [
    "ISC001",   # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/
    "PLC0415",  # https://docs.astral.sh/ruff/rules/import-outside-top-level/
    "PLR0904",  # https://docs.astral.sh/ruff/rules/too-many-public-methods/
    "PLR0911",  # https://docs.astral.sh/ruff/rules/too-many-return-statements/
    "PLR0912",  # https://docs.astral.sh/ruff/rules/too-many-branches/
    "PLR0913",  # https://docs.astral.sh/ruff/rules/too-many-arguments/
    "PLR0914",  # https://docs.astral.sh/ruff/rules/too-many-locals/
    "PLR0915",  # https://docs.astral.sh/ruff/rules/too-many-statements/
    "PLR0916",  # https://docs.astral.sh/ruff/rules/too-many-boolean-expressions/
    "PLR0917",  # https://docs.astral.sh/ruff/rules/too-many-positional/
    "PLR2004",  # https://docs.astral.sh/ruff/rules/magic-value-comparison/
    "PT011",    # https://docs.astral.sh/ruff/rules/pytest-raises-too-broad/
    "RUF001",   # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-string/
    "TRY003",   # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
]
